# Chip8

./: CMakeLists.txt  main.cpp
src/: Chip.cpp  Chip.h  Platform.cpp  Platform.h
